[project]
name = "conversational-rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "pypdf>=6.1.3",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
]
